--- a/css/app.css
+++ b/css/app.css
@@ -24,3 +24,18 @@ a {
 img {
     max-width: 100%;
 }
+
+/* LAYOUT */
+.container{
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-16{
+    width: calc(100%/6);
+}
