--- a/css/app.css
+++ b/css/app.css
@@ -52,10 +52,35 @@ img {
 
 
 
+
+/* MAIN */
+.text-box{
+    padding: 0 0 20px 0;
+    line-height: 16px;
+}
+
+
+
+
+
+
+
+
+
+
 /* UTILITIES */
 .basis-33{
     flex-basis: 33%;
 }
+
+.fs-14{
+    font-size: 14px;
+}
+
+.color-red{
+    color: red;
+}
+
 
 
 
